--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Mitch-Tyrer/deploy_demo/issues"
   },
-  "homepage": "https://github.com/Mitch-Tyrer/deploy_demo#readme"
+  "homepage": "https://github.com/Mitch-Tyrer/deploy_demo#readme",
+  "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.4"
+  }
 }
